<resources>
    <string name="app_name">PhonebookApp</string>
    <string name="_25">25</string>
    <string name="_070799277">070799277</string>
    <string name="erik_la_i">Erik Lašič</string>
    <string name="ptuj">Ptuj</string>
    <string name="_2250">2250</string>
    <string name="phonebookimage">PhonebookImage</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="house_number">House Number</string>
    <string name="info">INFO</string>
    <string name="add">ADD</string>
    <string name="exit">EXIT</string>
    <string name="about">ABOUT</string>
    <string name="home">HOME</string>
    <string name="ime_aplikacije">Name of application:</string>
    <string name="phonebook">Phonebook</string>
    <string name="opis_aplikacije">App description:</string>
    <string name="aplikacija_je_namenjena_hranjenju_telefonskih_tevilk_in_osebnih_podatkov_na_njej_lahko_poi_ete_kontakt_drugih_ljudi">The application is intended for storing phone numbers and personal data. You can find other people\'s contacts on it</string>
    <string name="verzija_aplikacije">App version:</string>
    <string name="_1_2">1.3</string>
    <string name="ime_avtorja">Author name:</string>
    <string name="phonebook_app">Phonebook App</string>
    <string name="users">Users</string>
</resources>