<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".AddActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PhoneNumberIF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#787777"
        app:layout_constraintBottom_toTopOf="@+id/NameSurnameIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PhoneNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_070799277"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameSurnameIF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#787777"
        app:layout_constraintBottom_toTopOf="@+id/CityIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumberIF"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameSurnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/erik_la_i"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CityIF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#787777"
        app:layout_constraintBottom_toTopOf="@+id/PostcodeIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/NameSurnameIF"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ptuj"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PostcodeIF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#787777"
        app:layout_constraintBottom_toTopOf="@+id/HouseNumberIF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/CityIF"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PostcodeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_2250"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/HouseNumberIF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#787777"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/PostcodeIF"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/HouseNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_25"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/TopImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/phonebookimage"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phonebook" />

    <TextView
        android:id="@+id/PhoneNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/PhoneNumberIF"
        app:layout_constraintEnd_toStartOf="@+id/PhoneNumberIF"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/NameSurnameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_and_surname"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/NameSurnameIF"
        app:layout_constraintEnd_toStartOf="@+id/NameSurnameIF"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/CityIF"
        app:layout_constraintEnd_toStartOf="@+id/CityIF"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PostcodeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcode"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/PostcodeIF"
        app:layout_constraintEnd_toStartOf="@+id/PostcodeIF"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/HouseNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_number"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/HouseNumberIF"
        app:layout_constraintEnd_toStartOf="@+id/HouseNumberIF"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginEnd"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/fontSize"
        android:background="@drawable/button_appearance"
        app:backgroundTint="@null"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/HomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginEnd"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/fontSize"
        android:background="@drawable/button_appearance"
        app:backgroundTint="@null"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutButton"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_appearance"
        app:backgroundTint="@null"
        android:text="@string/add"
        android:textSize="@dimen/fontSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/TopImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopImage" />

    <ImageView
        android:id="@+id/ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        app:srcCompat="@drawable/exitimage"/>

</androidx.constraintlayout.widget.ConstraintLayout>