<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/AddButton"
        android:layout_width="211dp"
        android:layout_height="86dp"
        android:background="@drawable/button_appearance"
        android:text="@string/add"
        android:textSize="@dimen/fontSize"
        android:layout_marginTop="100dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <Button
        android:id="@+id/AboutButton"
        android:layout_width="211dp"
        android:layout_height="86dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_appearance"
        android:text="@string/about"
        android:textSize="@dimen/fontSize"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddButton"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/UserButton"
        android:layout_width="211dp"
        android:layout_height="86dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_appearance"
        android:text="@string/users"
        android:textSize="@dimen/fontSize"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutButton"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        app:srcCompat="@drawable/exitimage"/>

    <ImageView
        android:id="@+id/phoneImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:scrollbarSize="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserButton"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleMarginTop"
        android:fontFamily="@font/high_jumps"
        android:textColor="@color/primaryColor"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/phonebook_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>